# teletraan

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .spr.yml  .travis.yml  AUTHORS.md  BOOTSTRAPPING.md  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_CLIENT.md  SQLI_VULNERABILITY_REPORT.md  WORKSPACE  deployagent  deployboard  docker-compose-no-db.yml  docker-compose.yml  potato  tox.ini
.github/: CODEOWNERS  codeql-config.yml  labeler.yml
.github/workflows/: bump-version.yml  codeql-analysis.yml  labeler.yml  maven.yml  pre-commit.yml  python.yml
cicd/api-test/: Dockerfile  api-test.sh  deploy-service-api-test.postman_collection.json  run-as-container.sh
deploy-agent/: .arcconfig  .arclint  .bumpversion.cfg  Dockerfile  Dockerfile.unittest  MANIFEST.in  README.md  WORKSPACE  clean.sh  debug.sh  pyproject.toml  requirements.txt  requirements_test.txt  run_tests.sh  setup.py  tox.ini  unit_tests_docker.sh
deploy-agent/deployd/: BUILD  BUILD.bazel  __init__.py  agent.py
deploy-agent/deployd/client/: __init__.py  base_client.py  client.py  restfulclient.py  serverless_client.py
deploy-agent/deployd/common/: __init__.py  caller.py  config.py  decorators.py  env_status.py  exceptions.py  executor.py  helper.py  single_instance.py  stats.py  status_code.py  types.py  utils.py
deploy-agent/deployd/conf/: __init__.py  agent.conf
deploy-agent/deployd/download/: download_helper.py  download_helper_factory.py  downloader.py  gpg_helper.py  http_download_helper.py  local_download_helper.py  s3_client.py  s3_download_helper.py
deploy-agent/deployd/restart/: restarter.py
deploy-agent/deployd/staging/: stager.py  transformer.py
deploy-agent/deployd/teletraan/: RESTARTING
deploy-agent/deployd/types/: agent_status.py  build.py  deploy_goal.py  deploy_stage.py  deploy_type.py  multi_goal_response_item.py  opcode.py  ping_report.py  ping_request.py  ping_response.py
deploy-agent/jenkins/: run.sh
deploy-agent/tests/: BUILD.bazel  __init__.py  run_unit_tests.sh
deploy-agent/tests/integration/: test_agent.py
deploy-agent/tests/unit/deploy/client/: deployagent.conf  test_base_client.py  test_client.py  test_serverless_client.py
deploy-agent/tests/unit/deploy/common/: __init__.py  test_config.py  test_empty_vars.py  test_helper.py  test_stats.py  test_utils.py
deploy-agent/tests/unit/deploy/download/: test.txt  test_download_helper.py  test_http_download_helper.py  test_local_download_helper.py  test_s3_download_helper.py
deploy-agent/tests/unit/deploy/restart/: __init__.py  test_restarter.py
deploy-agent/tests/unit/deploy/server/: test_agent.py
deploy-agent/tests/unit/deploy/staging/: test_helper.py  test_staging_helper.py  test_transformer.py
deploy-agent/tests/unit/deploy/types/: test_build.py  test_deploy_goal.py  test_ping_report.py  test_ping_request.py
deploy-agent/tests/unit/deploy/utils/: test_agent.py  test_exec.py  test_facter.py  test_status.py
deploy-board/: .arclint  .editorconfig  CHANGELOG.md  Dockerfile  README.md  __init__.py  dep.txt  manage.py  requirements.txt  run.sh  setup.py  test-commands
deploy-board-react/: .babelrc  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  README.md  config-overrides.js  package.json
deploy-board-react/public/: data.json  index.html  manifest.json
deploy-board-react/src/: apis.js  index.css  index.js  routes.js
deploy-board/deploy_board/: settings.py  urls.py  wsgi.py
deploy-board/integ_test/: README  agent_tests.py  auto_deploy_tests.py  build_tests.py  commons.py  env_config_tests.py  env_deploy_tests.py  ping_tests.py  run.sh
deploy-board/tools/: README  agent_simulator.py  commons.py  create_deploy.py  create_env.py  pinger.py  publish_build.py  run.sh
deploy-sentinel/: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  agent.conf  build_info.sh  demo_provision.sh  demo_run.sh  demo_run_vagrant.sh  host_info  quickstart.py  setup.py
deploy-sentinel/docker/: query-mac.sh  run-mac.sh
deploy-sentinel/mysite/: manage.py
deploy-sentinel/service/: deploy-sentinel  run_server.sh
deploy-sentinel/teletraan/: HEALTH_CHECK  POST_DOWNLOAD  POST_RESTART  PRE_DOWNLOAD  PRE_RESTART  RESTARTING  STOPPING  test.conf.tmpl
deploy-service/: Dockerfile.dev  Dockerfile.unittest  README.md  dependency.txt  pom.xml  settings.xml  unittest_build.sh
deploy-service/common/: pom.xml
deploy-service/teletraanservice/: Dockerfile  README.md  pom.xml
deploy-service/universal/: README.md  pom.xml
docs/api/: Agents.md  Builds.md  Commits.md  DeployConstraints.md  Deploys.md  Environments.md  ExternalAlerts.md  GroupRoles.md  HostTags.md  Hosts.md  HostsAndSystems.md  HostsTags.md  Hotfixs.md  Ratings.md  Schedules.md  ScriptTokens.md  Specs.md  SystemGroupRoles.md  Tags.md  UserRoles.md  definitions.md  overview.md
docs/auth/: README.md  teletraan_auth.yaml
docs/docs_generator/: .travis.yml  README.md  build.gradle  config.properties  generate_api_docs.py  gradlew  gradlew.bat  settings.gradle
tools/mysql/: README  README.dev  check_version.sql  deploydb.sh  (+22 more)
vagrant/: README.md  Vagrantfile  provision_dev_env.sh
(+1244 files in other folders)
